--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#3B2B0C",
         "titleBar.activeBackground": "#533C11",
         "titleBar.activeForeground": "#FDFBF6"
-    }
+    },
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
